apps/base/pocket-id/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: pocket-id
    labels:
        toolkit.fluxcd.io/tenant: sys
