apps/base/pocket-id/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: pocket-id
    namespace: pocket-id
spec:
    selector:
        matchLabels:
            app: pocket-id
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                app: pocket-id
        spec:
            securityContext:
                fsGroup: 1000
                seccompProfile:
                    type: RuntimeDefault

            containers:
                - name: pocket-id
                  image: ghcr.io/11notes/pocket-id:2.18
                  imagePullPolicy: Always
                  securityContext:
                      runAsUser: 1000
                      runAsGroup: 1000
                      runAsNonRoot: true
                      allowPrivilegeEscalation: false
                      capabilities:
                          drop: ["ALL"]
                  livenessProbe:
                      tcpSocket:
                          port: 1411
                      initialDelaySeconds: 0
                      failureThreshold: 3
                      timeoutSeconds: 1
                      periodSeconds: 10
                  readinessProbe:
                      tcpSocket:
                          port: 1411
                      initialDelaySeconds: 0
                      failureThreshold: 3
                      timeoutSeconds: 1
                      periodSeconds: 10
                  startupProbe:
                      tcpSocket:
                          port: 1411
                      initialDelaySeconds: 0
                      failureThreshold: 30
                      timeoutSeconds: 1
                      periodSeconds: 5
                  resources:
                      limits:
                          cpu: "0.25"
                          memory: "256Mi"
                      requests:
                          cpu: "0.1"
                          memory: "128Mi"
                  ports:
                      - name: webui
                        containerPort: 1411
                        protocol: TCP
                  volumeMounts:
                      - name: data
                        mountPath: "/pocket-id/var"

            volumes:
                - name: data
                  hostPath:
                      path: "/mnt/SSD/app-storage/pocket-id"
                      type: Directory
