apps/base/pocket-id/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: pocket-id
    namespace: pocket-id
spec:
    type: ClusterIP
    selector:
        app: pocket-id
    ports:
        - name: webui
          port: 1411
          protocol: TCP
