apps/base/pocket-id/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: pocket-id-ingress
    namespace: pocket-id
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`auth.guibi.dev`)
          kind: Rule
          services:
              - name: pocket-id
                namespace: pocket-id
                port: 1411
                scheme: http
    tls:
        secretName: tls-certificate
